--- a/.gitignore
+++ b/.gitignore
@@ -59,4 +59,8 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+# Sensitive Infomation
+.env
+.env**
+!.env.example
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle
