feat : basic log4j2 config add

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8081
 
 spring:
+  profiles:
+    active:
+    - local
   datasource:
     url: jdbc:mariadb://mariadb:3306/maplekiosk
     username: ${DB_USER}
