feat : example env.var add

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-DB_USER=mapleuser
-DB_PASSWORD=maplepass
-JWT_SECRET=super-secret-key
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=maple_auth
+DB_USER=idhere
+DB_PASSWORD=passwordhere
+JWT_SECRET=secretkeyhere
