--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,20 @@ spring:
   profiles:
     active:
     - local
+
   datasource:
-    url: jdbc:mariadb://mariadb:3306/maplekiosk
+    url: jdbc:mariadb://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:auth}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
+    driver-class-name: org.mariadb.jdbc.Driver
+  
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
+      
   config:
     import: optional:dotenv:.env
 
